<resources>
    <string name="app_name">Digi-ID</string>
    <string name="choose_profile_create_pin_heading">Valitse tunnusluku</string>
    <string name="choose_profile_create_pin_body">Valitse tunnusluku, jolla kirjaudut sovellukseen</string>
    <string name="choose_profile_verify_pin_heading">Vahvista tunnusluku</string>
    <string name="choose_profile_verify_pin_body">Syötä valitsemasi tunnusluku uudelleen</string>
    <string name="choose_profile_verify_pin_error">Virheellinen tunnusluku</string>
    <string name="auth_pin_code_heading">Anna tunnusluku</string>
    <string name="auth_pin_code_body">Kirjaudu Digitaaliseen lompakkoosi</string>
    <string name="auth_authenticate_button">Kirjaudu</string>
    <string name="auth_authentication_failed">Kirjautuminen epäonnistui</string>
    <string name="button_cancel">Peruuta</string>
    <string name="button_accept">Hyväksy</string>
    <string name="wallet_share_title">Luo todistus</string>
    <string name="wallet_share_heading">Sinusta välitetään seuraavat tiedot tarkastajalle:</string>
    <string name="wallet_share_credential_age18_button">Todistan ikäni: Yli 18v</string>
    <string name="wallet_share_credential_age20_button">Todistan ikäni: Yli 20v</string>
    <string name="wallet_verify_birthdate_button">Haluan tarkistaa iän</string>
    <string name="wallet_qr_code_accessibility_label">QR-koodi</string>
    <string name="choose_profile_heading">Valitse testihenkilö</string>
    <string name="credential_type_age">Ikätieto</string>
    <string name="credential_value_age">Yli %1$d vuotta</string>
    <string name="main_menu_logout">Kirjaudu ulos</string>
    <string name="verify_credential_age_over">Yli %1$dv</string>
    <string name="verify_credential_age_under">Alle %1$dv</string>
    <string name="verify_credential_other">Muu todistus</string>
    <string name="verify_credential_invalid">Todistuksen allekirjoitus on virheellinen</string>
    <string name="create_profile_save_certificate">Tallenna varmenne</string>
    <string name="create_profile_key_status">Tallennettu turvallisesti</string>
    <string name="create_profile_key_type">Avaimen tyyppi:</string>
    <string name="create_profile_create_csr">Luo CSR</string>
    <string name="create_profile_pem_label">Varmenne</string>
    <string name="create_profile_satu_label">SATU</string>
</resources>