<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="fi.dvv.digiid.poc.wallet.ui.credentials.WalletViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.helper.widget.Flow
                    android:id="@+id/flow2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical"
                    app:constraint_referenced_ids="share_heading,share_birthdate_label,share_birthdate_value,credential_icon"
                    app:flow_wrapMode="none"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/button_cancel"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/confirm_button" />

                <Button
                    android:id="@+id/confirm_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/button_accept"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/cancel_button"
                    app:layout_constraintTop_toBottomOf="@+id/flow2" />

                <TextView
                    android:id="@+id/share_heading"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingBottom="30dp"
                    android:text="@string/wallet_share_heading"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    tools:layout_editor_absoluteX="163dp"
                    tools:layout_editor_absoluteY="20dp" />

                <TextView
                    android:id="@+id/share_birthdate_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.credentialType}"
                    android:textAppearance="?attr/textAppearanceSubtitle2"
                    tools:text="Ikätieto" />

                <TextView
                    android:id="@+id/share_birthdate_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingBottom="50dp"
                    android:text="@{viewModel.credentialValue(context)}"
                    android:textAppearance="?attr/textAppearanceBody1"
                    tools:layout_editor_absoluteX="20dp"
                    tools:layout_editor_absoluteY="91dp"
                    tools:text="Yli 18 vuotta" />

                <ImageView
                    android:id="@+id/credential_icon"
                    android:layout_width="0dp"
                    android:layout_height="85dp"
                    android:scaleType="fitStart"
                    app:srcCompat="@drawable/ic_credential"
                    tools:ignore="ContentDescription" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>